--- a/src/css/main.css
+++ b/src/css/main.css
@@ -79,13 +79,6 @@
   align-items: center;
 }
 
-.button-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
 .text-name-h2 {
   font-size: 35px;
   color: #ffffff;
@@ -116,6 +109,7 @@
   color: #eaf9f5;
   border-top: 5px solid #EAF9F4;
   font-size: 13px;
+  margin-right: 15px;
 }
 
 
@@ -124,16 +118,17 @@
   color: #ddf5fd;
   border-top: 5px solid #EAF9F4;
   font-size: 13px;
+  margin-left: 15px;
 }
 
 .button-container {
-  width: 360px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-top: 148px;
 }
+
 
 .container-body {
   display: flex;
@@ -180,18 +175,11 @@
   color: #ffffff;
   font-size: 20px;
   position: relative;
-  right: 36px;
+  right: 5%;
 }
 
 .text-inside-dark {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-self: center;
   color: #18cfab;
-  font-size: 20px;
-  position: relative;
-  right: 36px;
 }
 
 .amazing-features {
@@ -201,31 +189,14 @@
   align-items: center;
   height: 831px;
   flex-wrap: wrap;
-  margin-left: 388px;
-  margin-right: 414px;
-
 }
 
 
-.Rtable {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0;
-}
-
-.Rtable-cell {
-  box-sizing: border-box;
-  flex-grow: 1;
-  width: 100%;
-/ / Default to full width padding: 0.8 em 1.2 em;
-  overflow: hidden;
-/ / Or flex might break list-style: none;
-  padding-top: 104px;
-  font-size: 14px;
-}
-
-.Rtable--3cols > .Rtable-cell {
-  width: 33.33%;
+.features-block {
+  padding-right: 52px;
+  padding-left: 52px;
+  margin-top: 53px;
+  margin-bottom: 53px;
 }
 
 .font-size-text-amazing {
