--- a/src/css/main.css
+++ b/src/css/main.css
@@ -214,7 +214,6 @@
 }
 
 
-
 .amazing-img-item {
   padding-right: 34px;
 }
@@ -254,8 +253,26 @@
   color: #ddf5fd;
 }
 
-
 .nav-pills-block {
   margin-top: 84px;
 }
+
+.nav-item-item:first-child {
+  margin-left: 0;
+}
+
+.nav-item-item:last-child {
+  margin-right: 0;
+}
+
+.nav-link:hover {
+  color: #18cfab;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.nav-link {
+  color: #f5f5f5;
+}
+
 
