--- a/src/css/main.css
+++ b/src/css/main.css
@@ -275,4 +275,15 @@
   color: #f5f5f5;
 }
 
+.nav-item:hover {
+  color: #18cfab;
+  text-decoration: none;
+  border-top: 2px solid #18cfab;
+}
+
+.nav-item {
+  padding-right: 20px;
+  font-size: 16px;
+}
+
 
